chore(workers): setup local dev environment with secrets and config
- Add .dev.vars for local development secrets
- Update wrangler.toml with D1 and KV bindings
- Configure nodejs_compat compatibility flag
- Add TypeScript configuration
- Setup package.json with dependencies

Foundation (Phase 1) setup complete:
- D1 database with language support (migration 0005)
- KV namespaces (JWT_CACHE, SESSIONS)
- Local secrets management
- i18n test endpoint verified

--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -1,5 +1,14 @@
 {
-  "name": "workers",
+  "name": "marketer-suite-workers",
   "version": "1.0.0",
-  "dependencies": {}
+  "private": true,
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241127.0",
+    "typescript": "^5.3.3",
+    "wrangler": "^4.50.0"
+  }
 }
