security: update .gitignore with comprehensive patterns for secrets and build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,74 @@
-# Ignore node_modules and env files
+# ============================================
+# Dependencies
+# ============================================
 node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# ============================================
+# Environment & Secrets
+# ============================================
 .env
+.env.local
+.env.development
+.env.production
+.dev.vars
+.wrangler/
+
+# ============================================
+# Build Artifacts
+# ============================================
+dist/
+build/
+out/
+.output/
+*.js.map
+
+# ============================================
+# TypeScript
+# ============================================
+*.tsbuildinfo
+
+# ============================================
+# Logs
+# ============================================
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ============================================
+# IDE & Editors
+# ============================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# ============================================
+# Testing
+# ============================================
+coverage/
+.nyc_output/
+
+# ============================================
+# Temporary Files
+# ============================================
+*.tmp
+*.temp
+.cache/
+
+# ============================================
+# OS Files
+# ============================================
+Thumbs.db
+.DS_Store
+
+# ============================================
+# Cloudflare Specific
+# ============================================
+worker-configuration.d.ts
